--- a/allsubjects.html
+++ b/allsubjects.html
@@ -16,10 +16,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&family=Rubik+Scribble&display=swap" rel="stylesheet">
 
     <style>
-        body {
-            background-color: rgb(247,246,242);
-        }
-        
         .image-button {
             display: inline-block;
             width: 20%;
@@ -91,61 +87,61 @@
                     <img src="pics/allsubjects.png" style="width: 100%;"> 
                     <br><br>
                     <div class="buttons" style="padding: -20%;">
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/math.png" alt="מתמטיקה" />
                         </a>
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/english.png" alt="אנגלית" />
                         </a>
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/pc.png" alt="מדעי המחשב" />
                         </a>
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/phyisics.png" alt="פיזיקה" />
                         </a>
                     </div>
                     <br>
                     <div class="buttons" style="padding: -20%;">
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/seince.png" alt="מדעים" />
                         </a>
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/biology.png" alt="ביולוגיה" />
                         </a>
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/elect.png" alt="אלקטרוניקה" />
                         </a>
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/chimi.png" alt="כימיה" />
                         </a>
                     </div>
                     <br>
                     <div class="buttons" style="padding: -20%;">
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/biothec.png" alt="ביוטכנולוגיה" />
                         </a>
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/geografy.png" alt="גאוגרפיה" />
                         </a> 
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/azrhaot.png" alt="אזרחות" />
                         </a>
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/hebrew.png" alt="עברית" />
                         </a>
                     </div>
                     <br>
                     <div class="buttons" style="padding: -20%;">
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/arabic.png" alt="ערבית" />
                         </a>        
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/history.png" alt="היסטוריה" />
                         </a>
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/bible.png" alt="תנך" />
                         </a>
-                        <a href="404.html" target="_blank" class="image-button">
+                        <a href="404.html" class="image-button">
                             <img src="pics/books/sifrot.png" alt="ספרות" />
                         </a>
                     </div>
