--- a/404.html
+++ b/404.html
@@ -32,9 +32,8 @@
                     <a href="index.html">דף הבית</a>
                     <a href="about.html">אודות</a>
                     <a href="allsubjects.html">לכל המקצועות</a>
-                    <a href="404.html">צור קשר</a>
-                    <a href="404.html">התחברות</a>
-                    <a href="404.html">הרשמה</a>
+                    <a href="contact.html">צור קשר</a>
+                    <a href="login.html">התחברות</a>
                 </div>
             </td>
         </tr>
@@ -42,7 +41,7 @@
         <tr class = "In_The_Page">
             <td colspan = "3" valign = "top" style="border: 2px solid white;">
                 <div class="content">
-                    <img src="pics/404.png" style="width: 100%;"> 
+                    <img src="pics/404.png" style="width: 90%;"> 
                     <br>
                 </div>
             </td>
