--- a/index.html
+++ b/index.html
@@ -189,9 +189,8 @@
                     <a href="index.html">דף הבית</a>
                     <a href="about.html">אודות</a>
                     <a href="allsubjects.html">לכל המקצועות</a>
-                    <a href="404.html">צור קשר</a>
-                    <a href="404.html">התחברות</a>
-                    <a href="404.html">הרשמה</a>
+                    <a href="contact.html">צור קשר</a>
+                    <a href="login.html">התחברות</a>
                 </div>
             </td>
         </tr>
