--- a/allsubjects.html
+++ b/allsubjects.html
@@ -104,7 +104,7 @@
                         <a href="404.html" class="image-button">
                             <img src="pics/books/seince.png" alt="מדעים" />
                         </a>
-                        <a href="404.html" class="image-button">
+                        <a href="biology.html" class="image-button">
                             <img src="pics/books/biology.png" alt="ביולוגיה" />
                         </a>
                         <a href="404.html" class="image-button">
@@ -125,7 +125,7 @@
                         <a href="404.html" class="image-button">
                             <img src="pics/books/azrhaot.png" alt="אזרחות" />
                         </a>
-                        <a href="404.html" class="image-button">
+                        <a href="hebrew.html" class="image-button">
                             <img src="pics/books/hebrew.png" alt="עברית" />
                         </a>
                     </div>
@@ -134,7 +134,7 @@
                         <a href="404.html" class="image-button">
                             <img src="pics/books/arabic.png" alt="ערבית" />
                         </a>        
-                        <a href="404.html" class="image-button">
+                        <a href="history.html" class="image-button">
                             <img src="pics/books/history.png" alt="היסטוריה" />
                         </a>
                         <a href="404.html" class="image-button">
