--- a/404.html
+++ b/404.html
@@ -34,6 +34,7 @@
                     <a href="allsubjects.html">לכל המקצועות</a>
                     <a href="contact.html">צור קשר</a>
                     <a href="login.html">התחברות</a>
+                    <a href="register.html">הרשמה</a>
                 </div>
             </td>
         </tr>
