--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
                     <a href="allsubjects.html">לכל המקצועות</a>
                     <a href="contact.html">צור קשר</a>
                     <a href="login.html">התחברות</a>
+                    <a href="register.html">הרשמה</a>
                 </div>
             </td>
         </tr>
@@ -41,7 +42,13 @@
         <tr class = "In_The_Page">
             <td colspan = "3" valign = "top" style="border: 2px solid white;">
                 <div class="content">
-                    <img src="pics/chips.png" width="20%" style="float: left;">
+                    <img src="pics/about.png" style="width: 90%;"> <br><br><br><br>
+                    <img src="pics/about/1.png" style="width: 85%;"><br><br>
+                    <img src="pics/about/2.png" style="width: 85%;"><br><br><br><br><br>
+                    <img src="pics/about/3.png" style="width: 85%;"><br><br><br><br><br>
+                    <img src="pics/about/4.png" style="width: 85%;"><br><br><br><br><br><br><br>
+                    <img src="pics/about/5.png" style="width: 100%;">
+                    <br>
                 </div>
             </td>
         </tr>
