--- a/allsubjects.html
+++ b/allsubjects.html
@@ -76,6 +76,7 @@
                     <a href="allsubjects.html">לכל המקצועות</a>
                     <a href="contact.html">צור קשר</a>
                     <a href="login.html">התחברות</a>
+                    <a href="register.html">הרשמה</a>
                 </div>
             </td>
         </tr>
@@ -83,7 +84,7 @@
         <tr class = "In_The_Page">
             <td colspan = "3" valign = "top" style="border: 2px solid white;">
                 <div class="content">
-                    <img src="pics/allsubjects.png" style="width: 100%;"> 
+                    <img src="pics/allsubjects.png" style="width: 90%;">  
                     <br><br>
                     <div class="buttons" style="padding: -20%;">
                         <a href="404.html" class="image-button">
