--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
                     <a href="allsubjects.html">לכל המקצועות</a>
                     <a href="contact.html">צור קשר</a>
                     <a href="login.html">התחברות</a>
+                    <a href="register.html">הרשמה</a>
                 </div>
             </td>
         </tr>
@@ -41,7 +42,8 @@
         <tr class = "In_The_Page">
             <td colspan = "3" valign = "top" style="border: 2px solid white;">
                 <div class="content">
-                    
+                    <img src="pics/contact.png" style="width: 90%;"><br><br><br><br>
+                    <a href="mailto:perfectstudy23@gmail.com"><img src="pics/contact/contactDetails.png" style="width: 85%;"></a>
                     <br>
                 </div>
             </td>
