--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                     <a href="allsubjects.html">לכל המקצועות</a>
                     <a href="contact.html">צור קשר</a>
                     <a href="login.html">התחברות</a>
+                    <a href="register.html">הרשמה</a>
                 </div>
             </td>
         </tr>
@@ -198,9 +199,9 @@
         <tr class = "In_The_Page">
             <td colspan = "3" valign = "top" style="border: 2px solid white;">
                 <div class="content">
-                    <img src="pics/index1.png" style="width: 95%;"> 
+                    <img src="pics/index1.png" style="width: 90%;"> 
                     <br><br><br>
-                    <img src="pics/index2.png" style="width: 95%;"> 
+                    <img src="pics/index2.png" style="width: 90%;"> 
                     <br><br><br><br>
 
                     <div class="carousel-navigation">
