--- a/about.html
+++ b/about.html
@@ -42,12 +42,12 @@
         <tr class = "In_The_Page">
             <td colspan = "3" valign = "top" style="border: 2px solid white;">
                 <div class="content">
-                    <img src="pics/about.png" style="width: 90%;"> <br><br>
-                    <img src="pics/about/1.png" style="width: 85%;"><br><br>
-                    <img src="pics/about/2.png" style="width: 85%;"><br><br>
-                    <img src="pics/about/3.png" style="width: 85%;"><br><br>
-                    <img src="pics/about/4.png" style="width: 85%;"><br><br><br>
-                    <img src="pics/about/5.png" style="width: 100%;"><br><br>
+                    <img src="pics/about.png" class="headLine-image"> <br><br>
+                    <img src="pics/about/1.png" class="content-image"><br><br>
+                    <img src="pics/about/2.png" class="content-image"><br><br>
+                    <img src="pics/about/3.png" class="content-image"><br><br>
+                    <img src="pics/about/4.png" class="content-image"><br><br><br><br>
+                    <img src="pics/about/5.png" style="width: 100%;">
                     <br>
                 </div>
             </td>
