--- a/allsubjects.html
+++ b/allsubjects.html
@@ -84,7 +84,7 @@
         <tr class = "In_The_Page">
             <td colspan = "3" valign = "top" style="border: 2px solid white;">
                 <div class="content">
-                    <img src="pics/allsubjects.png" style="width: 90%;">  
+                    <img src="pics/allsubjects.png" class="headLine-image">  
                     <br><br>
                     <div class="buttons" style="padding: -20%;">
                         <a href="404.html" class="image-button">
