--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,8 @@
         <tr class = "In_The_Page">
             <td colspan = "3" valign = "top" style="border: 2px solid white;">
                 <div class="content">
-                    <img src="pics/contact.png" style="width: 90%;"><br><br>
-                    <a href="mailto:perfectstudy23@gmail.com"><img src="pics/contact/contactDetails.png" style="width: 85%;"></a>
+                    <img src="pics/contact.png" style="width: 90%;" class="headLine-image"><br><br>
+                    <a href="mailto:perfectstudy23@gmail.com"><img src="pics/contact/contactDetails.png" class="content-image"></a>
                     <br>
                 </div>
             </td>
