--- a/register.html
+++ b/register.html
@@ -42,7 +42,7 @@
         <tr class = "In_The_Page">
             <td colspan = "3" valign = "top" style="border: 2px solid white;">
                 <div class="content">
-                    <img src="pics/register.png" style="width: 90%;"> 
+                    <img src="pics/register.png" class="headLine-image"> 
                     <form method="post" runat="server" onsubmit="return validateForm();">
                         <table class="form-table">
                             <tr>
